De-flake AppShimInteractiveTest.Launch

This test depended on a synchronous quitting handshake. Now instead
just ensure that the messages are queued before terminate.

Bug: 913181
Change-Id: I15428a0fc263d16885a69486ef3f77faf74806cd
Reviewed-on: https://chromium-review.googlesource.com/c/1369136
Commit-Queue: ccameron <ccameron@chromium.org>
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Cr-Commit-Position: refs/heads/master@{#615269}
Former-commit-id: 489b58517172cd4d17436e239b8e886f1467c47a